fix the Documents problems
